# xls

./: .bazelrc  .bazelversion  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .mdformat.toml  .pre-commit-config.yaml  BUILD  CONTRIBUTING.md  Dockerfile  Dockerfile-ubuntu-18.04  Dockerfile-ubuntu-20.04  Dockerfile-ubuntu-20.10  Dockerfile-ubuntu-22.04  GEMINI.md  MODULE.bazel  README.md  WORKSPACE  bazel_downloader.cfg  fuzztest.bazelrc  mkdocs.yml
.github/: dependabot.yml
build_scripts/: run-clang-tidy.sh
dependency_support/: BUILD.bazel  THIRD_PARTY_NOTICES.txt  automake_substitution.bzl  copy.bzl  initialize_external.bzl  load_external.bzl  pip_requirements.in  pip_requirements.txt  pip_requirements_lock.txt  pseudo_configure.bzl  repo.bzl
dependency_support/at_clifford_icestorm/: BUILD  bazel_find_chipdb.cc  bundled.BUILD.bazel  workspace.bzl
dependency_support/at_clifford_yosys/: bundled.BUILD.bazel  workspace.bzl  yosys.bzl
dependency_support/bitwuzla/: BUILD.bazel  bundled.BUILD.bazel  cadical.BUILD.bazel  config.patch  extension.bzl  msan.patch  symfpu.BUILD.bazel
dependency_support/boost/: BUILD.bazel  add_python.patch  backtrace_from_rule.patch  boost.MODULE.bazel  downgrade_lzma.patch  initialize.bzl  workspace.bzl
dependency_support/boringssl/: array-bounds.patch
dependency_support/busperf/: BUILD.bazel  bundled.BUILD.bazel  extension.bzl
dependency_support/clang_binaries/: BUILD  bundled.BUILD.bazel
dependency_support/com_github_alexforencich_verilog_axi/: BUILD.bazel  bundled.BUILD.bazel
dependency_support/com_github_facebook_zstd/: BUILD  allow-specifying-max-window-log.patch  bundled.BUILD.bazel  decodecorpus.patch  extension.bzl
dependency_support/com_github_grpc_grpc/: 0001-Add-absl-status-to-deps.patch  grpc-cython.patch  grpc_patch.diff
dependency_support/com_github_hlslibs_ac_types/: BUILD  bundled.BUILD.bazel  extension.bzl
dependency_support/com_google_absl/: BUILD.bazel  aarch64_rng_flags.patch
dependency_support/com_google_fuzztest/: BUILD.bazel  make_config_generator_public.diff
dependency_support/com_google_ortools/: 0001-Fix-GLPK-Eigen-and-SCIP-deps.patch  0002-Remove-duplicate-logtostderr-flag.patch  add_logging_prefix.diff  no-glpk.diff  no_glpk.diff  no_scip_or_pdlp.diff  ortools-no-rulescc.patch  remove_abslstringify.diff  remove_deps.diff
dependency_support/com_grail_bazel_toolchain/: 0001-Fix-call-to-int-version.patch  BUILD  google_workstation_workaround.patch
dependency_support/com_icarus_iverilog/: BUILD  build-plugins.bzl  bundled.BUILD.bazel  hello.v  hello_verilog_test.sh  hello_vpi.c  iverilog.sh  vvp.sh  workspace.bzl
dependency_support/dk_thrysoee_libedit/: BUILD  build_defs.bzl  bundled.BUILD.bazel  readline_example.cc  readline_test.cc  workspace.bzl
dependency_support/edu_berkeley_abc/: bundled.BUILD.bazel  workspace.bzl
dependency_support/embedded_python_interpreter/: BUILD.bazel  cc_so_library.bzl  print_libpython_path.py
dependency_support/flex/: BUILD  bundled.BUILD.bazel  flex.bzl  wc_test.sh  workspace.bzl
dependency_support/grpc/: BUILD.bazel  typing_extensions.patch
dependency_support/linenoise/: BUILD  bundled.BUILD.bazel
dependency_support/llvm/: BUILD  bundled.BUILD.bazel  common.bzl  expand_cmake_vars.py  extension.bzl  initialize.bzl  llvm.bzl  llvm.patch  workspace.bzl  zlib-header.patch
dependency_support/llvm_bazel/: initialize.bzl  workspace.bzl
dependency_support/net_invisible_island_ncurses/: BUILD  bundled.BUILD.bazel  ncurses_test.cc  workspace.bzl
dependency_support/nextpnr/: bundled.BUILD.bazel  workspace.bzl
dependency_support/openroad/: slang_path.patch
dependency_support/or-tools/: make_pdlp_public.patch
dependency_support/org_gnu_bison/: BUILD  bison.bzl  bundled.BUILD.bazel  calc_test.sh  workspace.bzl
dependency_support/org_gnu_gperf/: bundled.BUILD.bazel  workspace.bzl
dependency_support/org_gnu_m4/: BUILD  bundled.BUILD.bazel  workspace.bzl
dependency_support/org_sourceware_bzip2/: bundled.BUILD.bazel  workspace.bzl
dependency_support/org_sourceware_libffi/: bundled.BUILD.bazel  workspace.bzl
dependency_support/org_tuxfamily_eigen/: BUILD.bazel  bundled.BUILD.bazel  sanity_test.cc  smoke_test.cc  workspace.bzl
dependency_support/perfetto/: extension.bzl
dependency_support/pprof/: bundled.BUILD.bazel  extension.bzl  workspace.bzl
dependency_support/prjtrellis/: BUILD  bazel_database_path.h  bundled.BUILD.bazel  workspace.bzl
dependency_support/prjtrellis_db/: bundled.BUILD.bazel  workspace.bzl
dependency_support/protobuf/: BUILD.bazel  fix_system_python.patch
dependency_support/protoc-gen-validate/: no-rulescc.patch
dependency_support/pybind11/: pybind11.bzl
dependency_support/pybind11_abseil/: status_module.patch
dependency_support/pybind11_bazel/: sysconfig_fix.patch
dependency_support/rapidcheck/: bundled.BUILD.bazel
dependency_support/renode/: axi_include.patch  build_defs.bzl  bundled.BUILD.bazel  initialize.bzl  renode.bzl  renode_imports.h.patch  toolchain.bzl  wishbone_include.patch
dependency_support/rules_hdl/: BUILD.bazel  add_standalone_verilator.patch  bump_verilator.patch  rename_eigen.patch  rename_swig.patch  rules_hdl_deps.patch  swig_bzlmod.patch  workspace.bzl
dependency_support/spin/: BUILD.bazel  bundled.BUILD.bazel  extension.bzl
dependency_support/spin/patches/: BUILD.bazel  spin.patch
dependency_support/systemlibs/: build_defs.bzl.tpl  com_grail_bazel_toolchain.toolchain.deps.bzl  com_grail_bazel_toolchain.toolchain.rules.bzl  llvm.BUILD  llvm_toolchain.BUILD  llvm_toolchain.toolchains.bzl  org_gnu_m4.BUILD  syslibs_configure.bzl  z3.BUILD  zlib.BUILD
dependency_support/tcl_tcl_tk/: workspace.bzl
dependency_support/tk_tcl_tcl/: bundled.BUILD.bazel  workspace.bzl
dependency_support/verible/: BUILD  visibility.patch
dependency_support/z3/: 6723.patch  build_defs.bzl  bundled.BUILD.bazel  extension.bzl  mpz_cpp.patch
dependency_support/zlib/: bundled.BUILD.bazel
dev_utils/: BUILD  make-compilation-db.sh  rebuild_golden_files.sh  run-clang-tidy-cached.sh  (+1 more)
(+7244 files in other folders)
