# Copyright 2026 The XLS Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cc_library(
    name = "cadical_lib",
    srcs = glob(
        ["src/*.cpp"],
        exclude = [
            "src/mobical.cpp",
            "src/ipasir.cpp",
            "src/ccadical.cpp",
            "src/cadical.cpp",
            "src/signal.cpp",
        ],
    ),
    hdrs = glob(
        [
            "src/*.hpp",
            "src/*.h",
        ],
        exclude = [
            "src/mobical.hpp",
            "src/ipasir.hpp",
            "src/ccadical.h",
            "src/signal.hpp",
        ],
    ),
    include_prefix = "cadical",
    includes = ["src"],
    local_defines = [
        "NBUILD",  # no build information
        "NCLOSEFROM",  # <unistd.h>'s closefrom is not available
    ],
    strip_include_prefix = "src",
    visibility = ["//visibility:public"],
)
