# Copyright 2026 The XLS Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

genrule(
    name = "busperf_bin",
    srcs = glob(["**"]),
    outs = ["busperf"],
    cmd = """
        cargo="$$PWD/$(location @busperf_rust_toolchain//:cargo/bin/cargo)"
        toolchain_root="$$(dirname $$(dirname $$(dirname "$$cargo")))"
        export CARGO_HOME="$$toolchain_root/cargo"
        export RUSTUP_HOME="$$toolchain_root/rustup"
        manifest="$(location Cargo.toml)"
        "$$cargo" build --release --manifest-path="$$manifest" \
            --target-dir="$$PWD/target" --bin busperf
        cp "$$PWD/target/release/busperf" $@
        chmod +x $@
    """,
    executable = True,
    local = True,
    tags = ["manual", "requires-network"],
    tools = ["@busperf_rust_toolchain//:cargo/bin/cargo"],
)
